Update de l'index

--- a/index.html
+++ b/index.html
@@ -21,20 +21,31 @@
             <span class="line l3"></span>
         </button>
 
-        <section class="home" id="writter">
+        <section class="home">
             <h1>Écoutez <span>votre musique</span> où <span>vous</span> voulez <span>quand</span> vous voulez</h1>
         </section>
-
-        <article class="container">
-            <img src="./images/audio.jpg" alt="image de casque audio">
-            <h2>Écoutez votre musique n'import où</h2>
-            <p>Avec KozoFy vous pouvez écouter votre musique n'importe où et surtout quand vous voulez.
-                 KozoFy ne nécéssite aucune connection et est donc utilisable hors-ligne !</p>
-        </article>
+        <a href="" class="deco-none">
+            <article class="container">
+                <img src="./images/audio.jpg" alt="image de casque audio" class="low-card">
+                <h2>Écoutez votre musique n'import où</h2>
+                <p>Avec KozoFy vous pouvez écouter votre musique n'importe où et surtout quand vous voulez.
+                KozoFy ne nécéssite aucune connection et est donc utilisable hors-ligne !</p>
+            </article>
+        </a>
         <article class="container2">
-            <img src="./images/info bulle.jpg" alt="image de casque audio">
-            <h2>Informations complémentaires</h2>
-            <p>À savoir aussi que KozoFy a son code en OpenSource ! Tout le monde peut donc consuler son code et donc sa gestion des musics. Vous pouvez d'ailleurs nous faire des retours pour nous donner de nouveaux morceaux à ajouter !</p>
+            <a href="" class="deco-none">
+                <img src="./images/info bulle.jpg" alt="image de casque audio" class="low-card">
+                <h2>Informations complémentaires</h2>
+                <p>À savoir aussi que KozoFy a son code en OpenSource ! Tout le monde peut donc consuler son code et donc sa gestion des musics. Vous pouvez d'ailleurs nous faire des retours pour nous donner de nouveaux morceaux à ajouter !</p>
+            </a>
+        </article>
+
+        <article class="card">
+            <a href="" class="deco-none">
+                <img src="./images/phone.jpg" alt="image icon de téléchargement" class="high-card">
+                <h2>Téléchargement de notre logiciel</h2>
+                <p>Le logiciel est actuellement en bêta, le téléchargement est pour le moment impossible, nous vous tiendrons au courant de la suite. Pour toutes informations sur la sortie du logiciel n'hésitez pas à consulter la page <a href="" class="deco-none" id="surl">Information Importantes</a>, cette page contient toutes les dernières nouveautés et mises à jour <br><br> <span id="surl">L'équipe Kozofy vous remercie.</span></p>
+            </a>
         </article>
 
 
