--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <!-- NAVBAR -->
         <nav>
             <a href="index.html">Page d'accueil</a>
-            <a href="#">Téléchargment</a>
-            <a href="">Nos offres</a>
+            <a href="telechargement.html">Téléchargement</a>
+            <a href="offres.html">Nos offres</a>
             <a href="">En savoir plus</a>
             <a href="#">Se connecter</a>
         </nav>
@@ -37,27 +37,27 @@
             <article class="container">
                 <a href="" class="deco-none">
                     <img src="./images/audio.jpg" alt="image de casque audio" class="low-card">
-                    <h2>Écoutez votre musique n'import où</h2>
+                    <h2>Écoutez votre musique n'import où</h2> <br>
                     <p>Avec KozoFy vous pouvez écouter votre musique n'importe où et surtout quand vous voulez.
                     KozoFy ne nécéssite aucune connection et est donc utilisable hors-ligne !</p>
                 </a>
             </article>
             <article class="container2">
-                <a href="project.html" class="deco-none">
+                <a href="" class="deco-none">
                     <img src="./images/info bulle.jpg" alt="image de casque audio" class="low-card">
                     <h2>Informations complémentaires</h2>
                     <p>À savoir aussi que KozoFy a son code en OpenSource ! Tout le monde peut donc consuler son code et donc sa gestion des musics. Vous pouvez d'ailleurs nous faire des retours pour nous donner de nouveaux morceaux à ajouter !</p>
                 </a>
             </article>
             <article class="card">
-                <a href="" class="deco-none">
+                <a href="telechargement.html" class="deco-none">
                     <img src="./images/phone.jpg" alt="image icon de téléchargement" class="high-card">
                     <h2>Téléchargement de notre logiciel</h2>
                     <p>Le logiciel est actuellement en bêta, le téléchargement est pour le moment impossible, nous vous tiendrons au courant de la suite. Pour toutes informations sur la sortie du logiciel n'hésitez pas à consulter la page <a href="" class="deco-none" id="surl"> <strong>Information Importantes</strong> </a>, cette page contient toutes les dernières nouveautés et mises à jour <br><br> <span id="surl">L'équipe Kozofy vous remercie.</span></p>
                 </a>
             </article>
 
-            <a href=""><button type="button" class="btn">En savoir plus sur nos offres<i class="fa-solid fa-arrow-right" id="arrow"></i></button></a>
+            <a href="offres.html"><button type="button" class="btn">En savoir plus sur nos offres<i class="fa-solid fa-arrow-right" id="arrow"></i></button></a>
 
                     <!-- FOOTER -->
             <footer>
